# polypuppet

./: .gitignore  Gemfile  Makefile  Puppetfile  Vagrantfile  hiera.yaml  polypuppet.env  polypuppet.proto  pyproject.toml  requirements.txt
data/audience/: default.conf
data/classroom/: default.conf
data/nodes/: polypuppet.duckdns.org.conf
data/student/: default.conf
manifests/: r10k.pp  site.pp
modules/polypuppet/: hiera.yaml  metadata.json
modules/polypuppet/data/: default params.yaml  default_params.yaml  windows params.yaml  windows_params.yaml
modules/polypuppet/files/: Vagrantfile  facter.conf
modules/polypuppet/manifests/: check.pp  config.pp  defs.pp  facter.pp  init.pp  install.pp  params.pp  setup.pp
polypuppet/: api.py  config.py  definitions.py  exception.py  log_format.py  messages.py  polypuppet_pb2.py  puppet.py  request.py  setup.py
polypuppet/agent/: agent.py  api.py  cli.py  connection.py  daemon.py  output.py  setup.py
polypuppet/client/: client.py
polypuppet/connection/: __init__.py  reciever.py  sender.py
polypuppet/daemon/: __init__.py  api.py  authentication.py  cert_list.py  daemon.py  daemon_accessor.py  request.py
polypuppet/server/: audience.py  authentication.py  cert_list.py  server.py  token.py
scripts/: generate_proto.py  generate_proto.sh  import_puppet.sh  install_agent.sh  install_puppet.sh  install_python.sh  install_server.sh  setup_agent.ps1  setup_agent.sh  setup_server.sh
scripts/manifests/: setup_agent.pp  setup_server.pp
site/profile/manifests/: agent.pp  base.pp  (+3 more)
systemd/: polypuppet.service
(+14 files in other folders)
